--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 </div>
                 <div class="col-md-6 col-lg-4 col-xl-4" data-wow-delay="0.5s">
                     <div class="service-item text-center rounded p-4">
-                        <div class="service-icon d-inline-block bg-light rounded p-4 mb-4"> <img src="img/vector.png"
+                        <div class="service-icon d-inline-block bg-light rounded p-4 mb-4"> <img src="img/Vector.png"
                                 class="img-fluid" alt="gif 1">
                         </div>
                         <div class="service-content">
